--- a/package.json
+++ b/package.json
@@ -28,12 +28,9 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "prettier"
-    ],
-    "plugins":[
-        "prettier"
+      "react-app/jest"
     ]
+
   },
   "browserslist": {
     "production": [
